# bundle-builder

./: .eslintignore  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  playwright.config.ts  playwright.lambdatest.config.ts  shopify.app.toml
.github/workflows/: pr-agent.yml
app/routes/: app.cart-transform-create.jsx  app.settings.jsx  apps.bundle-builder-1.add-bundle.jsx  apps.bundle-builder-1.price.jsx  apps.bundle-builder.price.jsx
app/utils/: bundle-signature.server.js
docs/: README.md  bundle-architecture.md  mvp-plan.md  playwright-lambdatest.md  signing-contract.md  technical-deep-dive.md
e2e/: bundle-builder.spec.ts  helpers.ts  recurring-parallel.spec.ts
extensions/bundle-builder-discount/: package.json  shopify.extension.toml
extensions/bundle-builder-discount/src/: DiscountFunctionSettings.jsx
extensions/bundle-builder-ui/: shopify.extension.toml
extensions/bundle-builder-ui/assets/: bundle-builder.css  bundle-builder.js  bundle-builder.readable.js
extensions/bundle-builder-ui/blocks/: bundle-builder.liquid
extensions/bundle-cart-transform/: .gitignore  Cargo.toml  package.json  shopify.extension.toml
extensions/bundle-cart-transform/run-inputs/: no-operations.input.json  tampered-signature.input.json  valid-signature.input.json
extensions/bundle-cart-transform/src/: cart_transform_run.graphql  cart_transform_run.js  cart_transform_run.legacy.js  lib.rs
extensions/bundle-discount/: package.json  shopify.extension.toml
theme-files/: cart-products.liquid
(+5 files in other folders)
